eanble luci web server, copy scripts from old branch

--- a/.config
+++ b/.config
@@ -2077,7 +2077,7 @@ CONFIG_PACKAGE_procd=y
 # CONFIG_PROCD_ZRAM_TMPFS is not set
 CONFIG_PACKAGE_qos-scripts=m
 CONFIG_PACKAGE_resolveip=m
-CONFIG_PACKAGE_rpcd=m
+CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=m
 CONFIG_PACKAGE_rpcd-mod-iwinfo=m
 CONFIG_PACKAGE_rpcd-mod-rpcsys=m
@@ -2963,8 +2963,8 @@ CONFIG_PACKAGE_kmod-dma-buf=m
 #
 # Lua
 #
-CONFIG_PACKAGE_libiwinfo-lua=m
-CONFIG_PACKAGE_lua=m
+CONFIG_PACKAGE_libiwinfo-lua=y
+CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_lua-examples=m
 CONFIG_PACKAGE_luac=m
 
@@ -3004,7 +3004,7 @@ CONFIG_OPENSSL_WITH_EC=y
 # CONFIG_OPENSSL_ENGINE_DIGEST is not set
 # CONFIG_OPENSSL_HARDWARE_SUPPORT is not set
 CONFIG_OPENSSL_ENGINE_CRYPTO=y
-CONFIG_PACKAGE_libpolarssl=m
+CONFIG_PACKAGE_libpolarssl=y
 CONFIG_PACKAGE_argp-standalone=m
 CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_icu=m
@@ -3085,7 +3085,7 @@ CONFIG_PACKAGE_libiw=m
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libjson-c=y
 CONFIG_PACKAGE_libltdl=m
-CONFIG_PACKAGE_liblua=m
+CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblzo=m
 CONFIG_PACKAGE_libmnl=m
 CONFIG_PACKAGE_libmount=m
@@ -3130,16 +3130,16 @@ CONFIG_PACKAGE_libsocks=m
 CONFIG_PACKAGE_libubox=y
 CONFIG_PACKAGE_libubox-lua=m
 CONFIG_PACKAGE_libubus=y
-CONFIG_PACKAGE_libubus-lua=m
+CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci=y
-CONFIG_PACKAGE_libuci-lua=m
+CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libuclient=y
 CONFIG_PACKAGE_libusb-1.0=m
 CONFIG_PACKAGE_libusb-compat=m
 CONFIG_PACKAGE_libustream-cyassl=m
 CONFIG_PACKAGE_libustream-mbedtls=m
 CONFIG_PACKAGE_libustream-openssl=m
-CONFIG_PACKAGE_libustream-polarssl=m
+CONFIG_PACKAGE_libustream-polarssl=y
 CONFIG_PACKAGE_libuuid=m
 CONFIG_PACKAGE_libxml2=m
 CONFIG_PACKAGE_linux-atm=m
@@ -3155,13 +3155,13 @@ CONFIG_PACKAGE_zlib=y
 #
 # 1. Collections
 #
-CONFIG_PACKAGE_luci=m
-CONFIG_PACKAGE_luci-ssl=m
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-ssl=y
 
 #
 # 2. Modules
 #
-CONFIG_PACKAGE_luci-base=m
+CONFIG_PACKAGE_luci-base=y
 # CONFIG_LUCI_SRCDIET is not set
 
 #
@@ -3192,32 +3192,32 @@ CONFIG_PACKAGE_luci-base=m
 # CONFIG_LUCI_LANG_cs is not set
 # CONFIG_LUCI_LANG_fr is not set
 # CONFIG_LUCI_LANG_it is not set
-CONFIG_PACKAGE_luci-mod-admin-full=m
+CONFIG_PACKAGE_luci-mod-admin-full=y
 
 #
 # 3. Applications
 #
-CONFIG_PACKAGE_luci-app-ddns=m
-CONFIG_PACKAGE_luci-app-firewall=m
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-openvpn=m
 
 #
 # 4. Themes
 #
-CONFIG_PACKAGE_luci-theme-bootstrap=m
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 
 #
 # 5. Protocols
 #
-CONFIG_PACKAGE_luci-proto-ipv6=m
-CONFIG_PACKAGE_luci-proto-ppp=m
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-proto-ppp=y
 
 #
 # 6. Libraries
 #
-CONFIG_PACKAGE_luci-lib-ip=m
-CONFIG_PACKAGE_luci-lib-jsonc=m
-CONFIG_PACKAGE_luci-lib-nixio=m
+CONFIG_PACKAGE_luci-lib-ip=y
+CONFIG_PACKAGE_luci-lib-jsonc=y
+CONFIG_PACKAGE_luci-lib-nixio=y
 CONFIG_PACKAGE_luci-i18n-base-ca=m
 CONFIG_PACKAGE_luci-i18n-base-cs=m
 CONFIG_PACKAGE_luci-i18n-base-de=m
@@ -3579,7 +3579,7 @@ CONFIG_OPENVPN_polarssl_ENABLE_SMALL=y
 #
 CONFIG_PACKAGE_sockd=m
 CONFIG_PACKAGE_socksify=m
-CONFIG_PACKAGE_uhttpd=m
+CONFIG_PACKAGE_uhttpd=y
 # CONFIG_PACKAGE_uhttpd_debug is not set
 CONFIG_PACKAGE_uhttpd-mod-lua=m
 CONFIG_PACKAGE_uhttpd-mod-tls=m
@@ -3587,7 +3587,7 @@ CONFIG_PACKAGE_uhttpd-mod-tls=m
 CONFIG_PACKAGE_uhttpd-mod-tls_polarssl=y
 # CONFIG_PACKAGE_uhttpd-mod-tls_cyassl is not set
 # CONFIG_PACKAGE_uhttpd-mod-tls_openssl is not set
-CONFIG_PACKAGE_uhttpd-mod-ubus=m
+CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_6in4=m
 CONFIG_PACKAGE_6rd=m
 CONFIG_PACKAGE_6to4=m
@@ -3762,7 +3762,7 @@ CONFIG_PACKAGE_owipcalc=m
 CONFIG_PACKAGE_prlimit=m
 CONFIG_PACKAGE_procd-nand=y
 CONFIG_PACKAGE_procd-nand-firstboot=m
-CONFIG_PACKAGE_px5g=m
+CONFIG_PACKAGE_px5g=y
 CONFIG_PACKAGE_px5g-standalone=m
 CONFIG_PACKAGE_rename=m
 CONFIG_PACKAGE_screen=y
